# hackathon-physical-ai-humanoid-textbook

.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: Dockerfile  README.md  agent.py  api.py  main.py  pyproject.toml  requirements.txt  retrieving.py
docusaurus_textbook/: docusaurus.config.js
docusaurus_textbook/src/components/: ChatWidget.js
docusaurus_textbook/src/pages/: index.js
history/prompts/001-docusaurus-embedding-pipeline/: 1-embedding-pipeline-setup.spec.prompt.md  2-embedding-pipeline-planning.plan.prompt.md  3-embedding-pipeline-implementation.tasks.prompt.md
history/prompts/002-rag-retrieval-testing/: 1-rag-retrieval-testing.spec.prompt.md  2-rag-retrieval-planning.plan.prompt.md
history/prompts/003-rag-agent-fastapi/: 1-rag-agent-fastapi.spec.prompt.md  2-rag-agent-planning.plan.prompt.md
history/prompts/004-rag-frontend-integration/: 1-rag-frontend-integration.spec.prompt.md  2-rag-frontend-integration.plan.prompt.md
specs/001-docusaurus-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-docusaurus-embedding-pipeline/checklists/: requirements.md
specs/002-rag-retrieval-testing/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/002-rag-retrieval-testing/checklists/: requirements.md
specs/003-rag-agent-fastapi/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/004-rag-frontend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/1-textbook-project-structure/: tasks.md
(+2 files in other folders)
